fixed alignment of serving style icons on checkin form

--- a/frontend/src/components/CheckinFormModal/CheckinForm.css
+++ b/frontend/src/components/CheckinFormModal/CheckinForm.css
@@ -179,7 +179,7 @@
 
 #drink-icon {
   position: absolute;
-  bottom: 25px;
+  bottom: 18px;
   left: 183px;
   font-size: 30px;
 }
